--- a/templates/model.html
+++ b/templates/model.html
@@ -95,7 +95,7 @@
     <footer>
         <div class="footer">
             <div class="footer-first">
-                <h1>Uddeshya's personal portfolio</h1>
+                <h1>Travel Budget Prediction Model</h1>
             </div>
             <div class="footer-second">
                 <ul>
