--- a/templates/index.html
+++ b/templates/index.html
@@ -138,6 +138,7 @@
 
                 </ul>
             </div>
+            </div>
             <div class="footer-rights">
                 www.uddeshyapachauri.me | All rights reserved
             </div>
