--- a/templates/model.html
+++ b/templates/model.html
@@ -109,13 +109,13 @@
             </div>
             <div class="footer-third">
                 <ul>
-                    <li> <a href="https://www.facebook.com/uddeshya.dobriyal"><img src="/additional/facebookk.png"
+                    <li> <a href="https://www.facebook.com/uddeshya.dobriyal"><img src="/static/styles/additional/facebookk.png"
                                 alt="facebook" class="logo"> </a> </li>
-                    <li> <a href="https://www.instagram.com/uddeshyapachauri"><img src="/additional/insta.jpeg"
+                    <li> <a href="https://www.instagram.com/uddeshyapachauri"><img src="/static/styles/additional/insta.jpeg"
                                 alt="instagram" class="logo"> </a> </li>
                     <li> <a href="https://www.linkedin.com/in/uddeshya-pachauri-69a728186"><img
-                                src="/additional/linkedin.png" alt="linkedin" class="logo"> </a> </li>
-                    <li> <a href="https://github.com/Uddeshya8272"><img src="/additional/github.png" alt="github"
+                                src="/static/styles/additional/linkedin.png" alt="linkedin" class="logo"> </a> </li>
+                    <li> <a href="https://github.com/Uddeshya8272"><img src="/static/styles/additional/github.png" alt="github"
                                 class="logo"> </a> </li>
 
                 </ul>
