--- a/templates/model.html
+++ b/templates/model.html
@@ -33,7 +33,7 @@
                         Budget
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="model.html">Trip</a>
+                        <a class="dropdown-item" href="{{ url_for('pred')}}">Trip</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/">Go to home</a>
                     </div>
