--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,9 @@
                         linkedin
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ url_for('pred')}}">Uddeshya Pachauri</a>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/uddeshya-pachauri-69a728186">Uddeshya Pachauri</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/">Aditi Sharma</a>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/aditi-sharma-217a97194/">Aditi Sharma</a>
                     </div>
                 </li>
             </ul>
