--- a/templates/model.html
+++ b/templates/model.html
@@ -38,8 +38,16 @@
                         <a class="dropdown-item" href="/">Go to home</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" >Disabled</a>
+                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        linkedin
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/uddeshya-pachauri-69a728186">Uddeshya Pachauri</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/aditi-sharma-217a97194/">Aditi Sharma</a>
+                    </div>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
